<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/textView_nameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="SPEED CALCULATOR"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDistane"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="#BFFFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_distance_meter"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nameApp"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="80dp"
        android:background="#BFFFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_time_second"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView_Avenrage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDistane" />

    <Button
        android:id="@+id/button_Clear"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:background="#BFFFFFFF"
        android:text="@string/clear"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/button_Cal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <Button
        android:id="@+id/button_Cal"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="#BFFFFFFF"
        android:text="@string/calaulate"
        app:layout_constraintEnd_toEndOf="@+id/editTextTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_Clear"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <TextView
        android:id="@+id/textView_Avenrage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/avenrage_speed_km_h"
        android:textAlignment="center"
        android:textColor="#E30000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_Resulf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <TextView
        android:id="@+id/textView_Resulf"
        android:layout_width="249dp"
        android:layout_height="35dp"
        android:background="#FFFFFF"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Avenrage" />

</androidx.constraintlayout.widget.ConstraintLayout>